@@ -1,15 +1,22 @@
+/*
+ * Copyright (c)  2024 smartSense Consulting Solutions Pvt. Ltd.
+ */
+
 package com.smartsense.chat.edc.operation;
 
+import com.smartsense.chat.dao.entity.ChatMessage;
 import com.smartsense.chat.edc.client.EDCConnectorClient;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.stereotype.Service;
+import com.smartsense.chat.edc.settings.AppConfig;
+import com.smartsense.chat.service.ChatMessageService;
 
-import java.net.URI;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+
+import static com.smartsense.chat.utils.constant.ContField.TRANSFER_PROCESS_ID;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Service;
 
 @Service
 @RequiredArgsConstructor
@@ -17,26 +24,29 @@ import java.util.Map;
 public class TransferProcessService {
 
     private final EDCConnectorClient edc;
-    @Value("${edc.auth.code:password}")
-    private String authCode;
+    private final AppConfig config;
+    private final ChatMessageService chatMessageService;
 
-    public String initiateTransfer(URI edcUri, String agreementId) {
+    public String initiateTransfer(String agreementId, ChatMessage chatMessage) {
         try {
             log.info("Initiate transfer process for agreement Id {}", agreementId);
 
             // prepare transfer request
             Map<String, Object> transferRequest = prepareTransferRequest(agreementId);
             // initiate the transfer process
-            List<Map<String, Object>> transferResponse = edc.initTransferProcess(edcUri, transferRequest, authCode);
+            Thread.sleep(5_000);
+            List<Map<String, Object>> transferResponse = edc.initTransferProcess(config.edc().edcUri(), transferRequest, config.edc().authCode());
             log.info("Received transfer response -> {}", transferResponse);
 
             // get the transfer process id from response
-            String transferProcessId = transferResponse.get(0).get("transferProcessId").toString();
+            String transferProcessId = transferResponse.getFirst().get(TRANSFER_PROCESS_ID).toString();
             log.info("Transfer process id: {}", transferProcessId);
 
             log.info("Transfer process is complete successfully for agreement Id {}", agreementId);
             return transferProcessId;
         } catch (Exception ex) {
+            chatMessage.setErrorDetail(String.format("Error occurred in transfer process for agreement Id %s and Exception is %s", agreementId, ex.getMessage()));
+            chatMessageService.create(chatMessage);
             log.error("Error occurred in transfer process for agreement Id {}", agreementId, ex);
             return null;
         }
